--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -27,10 +27,10 @@ $warning   = #F2C037
 
 $loki-green = linear-gradient(180deg, #419B41 0%, #43BD43 100%)
 
-$oxen-navy = #1F1C47;
-$oxen-teal = #12C7BA;
+$oxen-navy = #000000;
+$oxen-teal = #129fca;
 $oxen-light-teal = #DBF7F5;
-$oxen-purple = #654192;
+$oxen-purple = #000000;
 
 $off-grey = #E8E8E8;
 
